# doc_router

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  REVIEW.md  docker-compose.yml  pyproject.toml  run-tests.sh
doc-router/: Dockerfile  helpers.py  main.py  pdf.py  requirements.txt  upstream.py
mineru/: Dockerfile  README.md
pymupdf4llm-api/: Dockerfile  main.py  requirements.txt
tests/: conftest.py  e2e.sh  requirements.txt  test_pymupdf_api.py  test_routing.py  test_unit.py
