[tool.poetry]
name = "doc-router"
version = "0.4.0"
description = "OpenWebUI document parsing router"
authors = ["RETD <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110"
"uvicorn" = {extras = ["standard"], version = "*"}
gunicorn = "*"
httpx = ">=0.27"
PyMuPDF = ">=1.24"
pymupdf4llm = ">=0.0.17"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
respx = ">=0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["doc-router", "pymupdf4llm-api"]
